# karbonit-utils

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  Readme.md  conanfile.py  dependencies.sh
CMake/modules/: Findlibtins.cmake
CMake/versioning/: GenerateGitTagVersion.cmake  GenerateVersionHeader.cmake  VersionForPackage.cmake.in  usage.cmake  version.h.in
conan/: conan_ubuntu
src/: CMakeLists.txt
src/BoostExtensions/: CMakeLists.txt
src/BoostExtensions/SignalsProxy/: CMakeLists.txt
src/BoostExtensions/SignalsProxy/include/BoostExtensions/: SignalsProxy.hpp
src/Logger/: CMakeLists.txt  KitLogManager.cpp  test.cpp
src/Logger/include/: KitLogManager.hpp  KitLogger.hpp
src/Logger/include/KitLogger/: ILoggerEngine.hpp  KitLogManager.hpp  LoggerManager.hpp
src/Logger/include/KitLogger/spdlogEngine/: spdlogEngine.hpp
src/Logger/spdlogEngine/: spdlogEngine.cpp
src/Misc/: CMakeLists.txt
src/Misc/include/: Math.hpp
src/Singleton/: CMakeLists.txt
src/Singleton/include/: Singleton.hpp
src/logger/: CMakeLists.txt  KitLogManager.cpp  Logger.cpp
src/logger/include/: Logger.hpp
src/misc/: CMakeLists.txt
src/misc/include/: Math.hpp
src/singleton/include/: Singleton.hpp
